# FEUP-CAL

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
Project-CAL/: .project
Project-CAL/Documentation/html/: _fake_edge_8h_source.html  _node_8h_source.html  _supermarket_network_8h_source.html  annotated.html  class_client-members.html  class_client.html  class_connection.html  class_edge_type.html  class_fake_edge-members.html  class_fake_edge.html  class_graph_viewer.html  class_node-members.html  class_purchase.html  class_supermarket_network-members.html  class_supermarket_network.html  class_truck.html  (+10 more)
Project-CAL/input/: NUMBER OF NODES,EDGES.txt  clients.txt  edges.txt  edges1.txt  edges2.txt  edges3.txt  edges4.txt  edges5.txt  edges6.txt  edges_big.txt  edges_medium.txt  edges_sandbox.txt  edges_small.txt  map_information.txt  markets.txt  nodes.txt  nodes1.txt  nodes2.txt  nodes3.txt  nodes4.txt  nodes5.txt  nodes6.txt  nodes_big.txt  nodes_medium.txt  nodes_sandbox.txt  nodes_small.txt  purchases.txt  results.txt  streets.txt  streets1.txt  streets2.txt  streets3.txt  streets4.txt  streets5.txt  streets6.txt  streets_big.txt  streets_medium.txt  streets_small.txt  time1.txt  time2.txt  (+3 more)
Project-CAL/src/: Client.cpp  Client.h  Date.cpp  Date.h  FakeEdge.cpp  FakeEdge.h  Files.cpp  Files.h  Graph.h  Item.cpp  Item.h  Node.cpp  Node.h  Purchase.cpp  Purchase.h  Source.cpp  Supermarket.cpp  Supermarket.h  SupermarketNetwork.cpp  SupermarketNetwork.h  Truck.cpp  Truck.h  connection.cpp  connection.h  edgetype.h  graphviewer.h  matcher.cpp  matcher.h
(+102 files in other folders)
